feat: create Text component

--- a/packages/react/.eslintrc.json
+++ b/packages/react/.eslintrc.json
@@ -1,5 +1,8 @@
 {
     "extends": [
       "@libellum-ds/eslint-config"
-    ]
+    ],
+    "rules": {
+      "react/display-name": "off"
+    }
   }
