--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "start-storybook -p 6006",
-    "build": "build-storybook"
+    "build": "build-storybook",
+    "test": "echo docs test"
   },
   "keywords": [],
   "author": "",
