--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -30,6 +30,7 @@
     "@libellum-ds/react": "*",
     "@libellum-ds/tokens": "*",
     "@libellum-ds/ts-config": "*",
+    "@storybook/addon-a11y": "^6.5.16",
     "@storybook/storybook-deployer": "^2.8.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
