--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
 	"scripts": {
 		"dev": "turbo run dev --parallel",
 		"build": "turbo run build",
-    "test": "turbo run test",
+		"test": "turbo run test",
+    "changeset": "changeset",
+    "version-packages": "changeset version",
+		"release": "turbo run build --filter=packages/docs && changeset publish",
 		"prepare": "husky install"
 	},
 	"devDependencies": {
+		"@changesets/cli": "^2.26.0",
 		"@commitlint/cli": "^17.4.2",
 		"@commitlint/config-conventional": "^17.4.2",
 		"commitizen": "^4.3.0",
@@ -22,9 +26,9 @@
 		"lint-staged": "^13.1.0",
 		"turbo": "^1.7.0"
 	},
-  "config": {
-    "commitizen": {
-      "path": "git-cz"
-    }
-  }
+	"config": {
+		"commitizen": {
+			"path": "git-cz"
+		}
+	}
 }
