--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
 		"dev": "turbo run dev --parallel",
 		"build": "turbo run build",
 		"test": "turbo run test",
-    "changeset": "changeset",
-    "version-packages": "changeset version",
+		"changeset": "changeset",
+		"version-packages": "changeset version",
 		"release": "turbo run build --filter=packages/docs && changeset publish",
 		"prepare": "husky install"
 	},
@@ -24,6 +24,7 @@
 		"git-cz": "^4.9.0",
 		"husky": "^8.0.0",
 		"lint-staged": "^13.1.0",
+		"react-router-dom": "^6.8.0",
 		"turbo": "^1.7.0"
 	},
 	"config": {
