--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "build": "tsup src/index.tsx --format esm,cjs --dts --external react",
     "dev": "tsup src/index.tsx --format esm,cjs --dts --watch --external react",
-    "test": "echo react test",
+    "test": "jest",
+    "test:watch": "jest --watchAll --verbose --coverage",
     "lint": "eslint src/**/*.ts* --fix"
   },
   "keywords": [],
@@ -18,9 +19,16 @@
     "@libellum-ds/eslint-config": "*",
     "@libellum-ds/tokens": "*",
     "@libellum-ds/ts-config": "*",
+    "@testing-library/dom": "^8.20.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.4.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "jest-environment-jsdom": "^29.4.1",
     "react": "^18.2.0",
+    "ts-jest": "^29.0.5",
     "tsup": "^6.5.0",
     "typescript": "^4.9.4"
   },
