--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -33,6 +33,7 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.0.1",
     "@stitches/react": "^1.2.8"
   }
 }
