--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   ],
   "scripts": {
     "dev": "turbo run dev --parallel",
-    "build": "turbo run build",
+    "build": "turbo run build --no-cache --force",
     "test": "turbo run test",
     "changeset": "changeset",
     "version-packages": "changeset version",
