--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -29,11 +29,12 @@
     "jest-environment-jsdom": "^29.4.1",
     "react": "^18.2.0",
     "ts-jest": "^29.0.5",
-    "tsup": "^6.5.0",
-    "typescript": "^4.9.4"
+    "tsup": "^6.6.3",
+    "typescript": "^4.9.5"
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.0.1",
-    "@stitches/react": "^1.2.8"
+    "@stitches/react": "^1.2.8",
+    "react-focus-lock": "^2.9.4"
   }
 }
